<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_image_loader_padding"
    tools:context=".challenge.ui.ChallengeActivity">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image_view_description"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/url_edit_field"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/url_edit_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/url_string_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/load_button"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/load_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBaseline_toBaselineOf="@id/url_edit_field"
        android:text="@string/challenge_button_load_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/url_edit_field"
        />
</androidx.constraintlayout.widget.ConstraintLayout>